--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Caprasimo&family=Roboto+Slab:wght@400;700&display=swap');
-
 * {
     box-sizing: border-box;
 }
@@ -19,7 +18,7 @@ html {
 
 body {
     background: radial-gradient(circle at top, rgba(241, 210, 70, 0.98), rgba(250, 176, 103, 0.87)),
-        url('bg-pattern-dark.png');
+        url('/public/bg-pattern-dark.png');
     background-repeat: repeat;
     background-size: 100% 100%, 30% 30%, 100% 100%;
     min-height: 110rem;
